# ros2-bagutils

./: ChangeLog.md  README.md
baggie/: CMakeLists.txt  package.xml
baggie/baggie/: _Baggie.py  __init__.py  util.py
baggie/baggie/cmd/: filter.py  join.py  split.py  timeline.py
baggie/scripts/: filter  join  split  timeline
baggie/src/py/: _baggie.cpp
baggie/test/: test_baggie_reader.py  test_baggie_writer.py  test_context_mgr.py  test_meta.py  test_sequential.py  test_sequential_compressed.py  test_stamping.py
